welcome.lessons.welcome.bat.bool2.BlueTicket.scala.error
blueTicket:2: error: missing arguments for method || in class Boolean;
follow this method with `_' if you want to treat it as a partially applied function
if(a+b==10||a+c==10||b+c=10){return 10}
                   ^blueTicket:3: error: ambiguous reference to overloaded definition,
both method + in class Int of type (x: Char)Int
and  method + in class Int of type (x: Short)Int
match expected type ?
else{if(a+b+10=b+c||a+b+10=a+c){return 5}else{return 0}}
           ^